Fixed text alignment in browse button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,6 +86,7 @@ h1{
   width: 200px;
   height: 50px;
   border-radius: 25px;
+  text-align: center;
   background: linear-gradient(40deg, #ff6ec4, #7873f5);
   box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
   display: flex;
